--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -28,7 +28,7 @@
     <li class="item">
       <a class="container-item" href="#">
       <div class="overlay-item">
-      <img src="../img/team/yuliia.jpg" alt="Yuliia Dubyniuk" width="145" class="card">
+      <img src="./img/team/yuliia.jpg" alt="Yuliia Dubyniuk" width="145" class="card">
       <div class="overlay-bg-item">
         <p class="overlay-text-item">Detective genre</p>
       </div>
@@ -40,7 +40,7 @@
     <li class="item">
       <a class="container-item" href="">
       <div class="overlay-item">
-      <img src="../img/team/mychailo.jpg" alt="Mykhailo Mamin" width="145" class="card">
+      <img src="./img/team/mychailo.jpg" alt="Mykhailo Mamin" width="145" class="card">
       <div class="overlay-bg-item">
         <p class="overlay-text-item">Fiction and detective stories</p>
       </div>
@@ -52,7 +52,7 @@
     <li class="item item-mi">
       <a class="container-item" href="#">
       <div class="overlay-item">
-      <img src="../img/team/oleksandra.jpg" alt="Oleksandra Tkach" width="145" class="card">
+      <img src="./img/team/oleksandra.jpg" alt="Oleksandra Tkach" width="145" class="card">
       <div class="overlay-bg-item">
         <p class="overlay-text-item">Fiction</p>
       </div>
@@ -64,7 +64,7 @@
     <li class="item">
       <a class="container-item" href="#">
       <div class="overlay-item">
-      <img src="../img/team/yegor.jpg" alt="Yehor Hlavatyi" width="145" class="card">
+      <img src="./img/team/yegor.jpg" alt="Yehor Hlavatyi" width="145" class="card">
       <div class="overlay-bg-item">
         <p class="overlay-text-item">Manga</p>
       </div>
@@ -76,7 +76,7 @@
     <li class="item">
       <a class="container-item" href="#">
       <div class="overlay-item">
-      <img src="../img/team/viktoriia.jpg" alt="Victoria Kozlova" width="145" class="card">
+      <img src="./img/team/viktoriia.jpg" alt="Victoria Kozlova" width="145" class="card">
       <div class="overlay-bg-item">
         <p class="overlay-text-item">Fantasy, detective and mystery</p>
       </div>
@@ -88,7 +88,7 @@
     <li class="item">
       <a class="container-item" href="#">
       <div class="overlay-item">
-      <img src="../img/team/vladyslav.jpg" alt="Vladislav Babitckyu" width="145" class="card">
+      <img src="./img/team/vladyslav.jpg" alt="Vladislav Babitckyu" width="145" class="card">
       <div class="overlay-bg-item">
         <p class="overlay-bg-item">Fantasy</p>
       </div>
@@ -100,7 +100,7 @@
     <li class="item">
       <a class="container-item" href="#">
       <div class="overlay-item">
-      <img src="../img/team/dmytro.jpg" alt="Dima Bodartinov" width="145" class="card">
+      <img src="./img/team/dmytro.jpg" alt="Dima Bodartinov" width="145" class="card">
 
       <div class="overlay-bg-item">
         <p class="overlay-text-item">Fantasy and adventure</p>
@@ -111,5 +111,4 @@
       </a>
     </li>
    </ul>
-
 </footer>
