--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,8 +4,9 @@
 .scroll-container{
   margin-bottom: 14px;
 }
-@media only screen and (min-width: 1437px) {
+@media only screen and (min-width: 1440px) {
 .footer{
+  width: 1440px;
   display: block;
   justify-content: center;
   align-items: center;
@@ -36,6 +37,7 @@
   gap: 8px;
 }
 .item {
+  width: calc((100% - 80px) / 9);
   background-color: var(--color-white);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
