--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header" id="header">
+<header class="header container" id="header">
   <a href="./index.html" class="logo-link"
     ><svg class="logo logo-icon" width="109" height="28">
       <use href="./img/svg/icons.svg#logo-icon"></use></svg
@@ -32,9 +32,29 @@
 
     <span class="slider round"></span>
   </label>
-  <button class="menu-toggle-btn" type="button">
+  <button class="menu-toggle-btn normal-mode" type="button">
     <svg class="menu-toggle-icon" width="28" height="28">
       <use href="./img/svg/icons.svg#icon-align-left"></use>
     </svg>
+    <svg class="menu-icon dark-mode-btn" width="28" height="28">
+      <use href="./img/svg/icons.svg#icon-dark-header-btn"></use>
+    </svg>
   </button>
+
+  <button class="sign-up-btn" type="button">
+    <span class="sign-up-btn-text">Sign up</span
+    ><svg class="" width="20" height="20">
+      <use href="./img/svg/icons.svg#icon-arrow"></use>
+    </svg>
+  </button>
+
+  <!-- <button class="user-btn" type="button">
+    <img src="./img/header/user-photo.jpg" alt="User photo" />User Name<svg
+      class=""
+      width="20"
+      height="20"
+    >
+      <use href="./img/svg/icons.svg#icon-caret-down"></use>
+    </svg>
+  </button> -->
 </header>
