--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -90,7 +90,7 @@
       <div class="overlay-item">
       <img src="./img/team/vladyslav.jpg" alt="Vladislav Babitckyu" width="145" class="card">
       <div class="overlay-bg-item">
-        <p class="overlay-bg-item">Fantasy</p>
+        <p class="overlay-text-item">Fantasy</p>
       </div>
       </div>
       <h3 class="fact-team">Vladislav Babitckyu</h3>
@@ -101,12 +101,11 @@
       <a class="container-item" href="#">
       <div class="overlay-item">
       <img src="./img/team/dmytro.jpg" alt="Dima Bodartinov" width="145" class="card">
-
       <div class="overlay-bg-item">
         <p class="overlay-text-item">Fantasy and adventure</p>
       </div>
       </div>
-      <h3 class="fact-team">Dima Bodartinov</h3>
+      <h3 class="fact-team">Dmytro Bodartinov</h3>
       <p class="fact-descr">Frontend developer</p>
       </a>
     </li>
