--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,6 +1,6 @@
     <div id="popUp" class="modal">
         <div class="modal-content">
-            <button class="close" type="button">
+            <button class="popUp-close" type="button">
                 <svg class="close-icon" width="20" height="20">
                   <use href="./img/svg/icons.svg#icon-close-x"></use>
                 </svg>
@@ -9,9 +9,10 @@
                 <div class="book-card-mw" >
             
                 </div>
-                <div>
+                <div class="popUp-footer">
                     <button class="add-button" type="submit">ADD TO SHOPPING LIST</button>
-                    <button class="remove-button display" type="submit">REMOVE FROM THE SHOPPING LIST</button>   
+                    <button class="remove-button display" type="submit">REMOVE FROM THE SHOPPING LIST</button>
+                    <p class="congratulations">Сongratulations! You have added the book to the shopping list. To delete, press the button “Remove from the shopping list”.</p>   
                 </div>   
             </div>
                     
