--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,11 +9,11 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-        <a href="./index.html" class="nav-link home-link">HOME</a>
+        <a href="./index.html" class="nav-link home-link js-open-page">HOME</a>
       </li>
 
       <li class="nav-item">
-        <a href="./shopping-list.html" class="nav-link"
+        <a href="./shopping-list.html" class="nav-link shop-list-page"
           >SHOPPING LIST<svg
             class="unchecked shoper-dark"
             width="20"
