--- a/src/css/shopping-list.css
+++ b/src/css/shopping-list.css
@@ -42,12 +42,12 @@
   display: flex;
   justify-content: space-between;
 }
-
+/* 
 .shopping-list-book-description {
   font-size: 14px;
   line-height: 1.3;
   letter-spacing: -0.04em;
-}
+} */
 
 @media screen and (min-width: 768px) {
   .shopping-list-title {
@@ -99,23 +99,6 @@
   width: 265px;
   height: 198px;
 }
-
-/* .shopping-list-book-card {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  border: 2px solid rgba(79, 46, 232, 0.4);
-  background: #fff;
-  border-radius: 16px;
-  width: 100%;
-  max-width: 335px;
-  height: 170px;
-  letter-spacing: -1.28px;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 14px;
-  position: relative;
-} */
 
 @media screen and (min-width: 768px) {
   .shopping-list-empty p {
@@ -174,7 +157,13 @@
   flex-direction: column;
   justify-content: space-between;
   margin-left: 14px;
-  height: 100%;
+  min-height: 110px;
+}
+
+@media screen and (min-width: 768px) {
+  .shopping-list-book-details {
+    min-height: 153px;
+  }
 }
 
 .shopping-list-book-name {
@@ -207,11 +196,10 @@
   letter-spacing: 0.36px;
 }
 
-.shopping-list-book-deskription {
+.shopping-list-book-description {
   overflow: hidden;
   color: #111;
   text-overflow: ellipsis;
-  white-space: nowrap;
   height: 53px;
   width: 100%;
   font-size: 14px;
@@ -221,7 +209,7 @@
   letter-spacing: -0.56px;
 }
 
-.shopping-list-author {
+.shopping-list-book-author {
   color: #b4afaf;
   margin-top: auto;
   font-size: 12px;
