--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -10,8 +10,7 @@
             
                 </div>
                 <div class="popUp-footer">
-                    <button class="add-button" type="submit">ADD TO SHOPPING LIST</button>
-                    <button class="remove-button display" type="submit">REMOVE FROM THE SHOPPING LIST</button>
+                    <button class="modal-button" type="submit">TEXT</button>
                     <p class="congratulations">Сongratulations! You have added the book to the shopping list. To delete, press the button “Remove from the shopping list”.</p>   
                 </div>   
             </div>
