buttons ADD and REMOVE working properly

--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,20 +1,20 @@
-    <div id="popUp" class="modal">
-        <div class="modal-content">
-            <button class="close" type="button">
-                <svg class="close-icon" width="20" height="20">
-                  <use href="./img/svg/icons.svg#icon-close-x"></use>
-                </svg>
-            </button>
-            <div class="modal-body">
-                <div class="book-card-mw" >
-            
-                </div>
-                <div>
-                    <button class="add-button" type="submit">ADD TO SHOPPING LIST</button>
-                    <button class="remove-button display" type="submit">REMOVE FROM THE SHOPPING LIST</button>   
-                </div>   
-            </div>
-                    
-
-        </div>        
+<div id="popUp" class="modal">
+  <div class="modal-content">
+    <button class="close" type="button">
+      <svg class="close-icon" width="20" height="20">
+        <use href="./img/svg/icons.svg#icon-close-x"></use>
+      </svg>
+    </button>
+    <div class="modal-body">
+      <div class="book-card-mw"></div>
+      <div>
+        <button class="add-button" type="submit">ADD TO SHOPPING LIST</button>
+        <button class="remove-button display" type="submit">
+          REMOVE FROM THE SHOPPING LIST
+        </button>
+      </div>
     </div>
+  </div>
+</div>
+
+
